# AndroidTextPredictor

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tokyonth/textpredictor/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_log.cpp  jni_log.h  native-lib.cpp  ngarm_model_data.h  ngram_model.cpp  ngram_model.h  ngram_model_io.cpp  ngram_model_io.h
app/src/main/java/com/tokyonth/textpredictor/: MainActivity.kt  TextPredictionManager.kt  TextPredictorNative.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tokyonth/textpredictor/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
